# har-capture

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: RESEARCH.md  TECH_DEBT.md
scripts/: ci-local.sh
src/har_capture/: __init__.py  __main__.py
src/har_capture/capture/: __init__.py  browser.py  connectivity.py  deps.py  workflow.py
src/har_capture/cli/: __init__.py  capture.py  main.py  sanitize.py  validate.py
src/har_capture/patterns/: README.md  __init__.py  allowlist.json  capture.json  hasher.py  loader.py  pii.json  sensitive.json
src/har_capture/sanitization/: __init__.py  har.py  html.py
src/har_capture/validation/: __init__.py  secrets.py
tests/: conftest.py  test_version.py
tests/test_capture/: __init__.py  test_browser.py  test_connectivity.py  test_deps.py  test_har_processing.py  test_integration.py  test_security.py  test_workflow.py
tests/test_cli/: test_capture.py  test_main.py  test_main_entry.py  test_sanitize.py  test_validate.py
tests/test_patterns/: __init__.py  test_hasher.py  test_loader.py
tests/test_sanitization/: __init__.py  test_edge_cases.py  test_har.py  test_html.py
tests/test_validation/: test_secrets.py
